# example_site

./: db.sqlite3  docker-compose.yml  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/tests/: helpers.py  test_posts.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_body.py  0003_post_author.py  0004_vote.py  0005_alter_vote_unique_together.py  0006_tag.py  0007_post_tags.py
examplesite/: settings.py  urls.py
overrides/: admin.py
polls/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
polls/migrations/: 0001_initial.py
static/blog/: styles.css
templates/: base.html
templates/blog/: detail.html  index.html  post_form.html  tag_detail.html  tag_form.html  tag_list.html
templates/polls/: detail.html  index.html  results.html
